Changes in Release 1.4.1
==============================================
[JOWS-23] - Update libs for 1.4.1

Changes in Release 1.4.0
==============================================
[JOWS-15] - AbstractDateTimeType does not handle all datetime formats
[JOWS-20] - Update 3rd party libs for 1.4.0 release
[JOWS-21] - Can we get the Relying Party's certificate data in the log
          - New object provider support for WS-Trust 1.3 specification
          - New object provider support for WS-Policy specification

Changes in Release 1.3.1
==============================================
[JOWS-17] - PropertyReplacementResourceFilter - avoid ClassCast exception due to empty properties file 

Changes in Release 1.3.0
==============================================
[JOWS-6] - Implement SOAP client
[JOWS-16] -  Update libs for 1.3.0 release

* New object provider support for WS-Security specification
* New object provider support for WS-Addressing specification
* Introduces a new message context Handler and HandlerChain framework
* New support for basic SOAP 1.1 messaging via encoders and decoders
* Client certificate authentication security policy rule exposes new protected methods
  which may be overridden by subclasses to supply the certificate presenter
  entity ID, and set it when it is successfully dynamically derived.

Changes in Release 1.2.2
==============================================
* Minor memory usage enhancements
* Pick up latest version of xmltooling

Changes in Release 1.2.1
==============================================
[JOWS-14] Cleanup StorageService related classes
* Update logging libraries to grab some bug fixes

Changes in Release 1.2.0
=============================================
[JOWS-8] - Allow a filter to be attached to a Resource
[JOWS-9] - SOAP Fault elements faultcode, faultstring, faultactor and detail shouldn't be prefixed
[JOWS-10] - Add constructor to filesystem-related resource providers that take a URL to the file.